chore: change background color

--- a/source/navbar-bottom.html
+++ b/source/navbar-bottom.html
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #f5f5f5;
   }
   .bottom-nav .nav-link {
     width: 25px;
