feat: implement lightbox

--- a/source/collage.html
+++ b/source/collage.html
@@ -16,7 +16,7 @@
           .map(
             item => `
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="${item}" alt="" />
+            <img class="h-auto max-w-full rounded-lg" src="${item}" alt="" data-fancybox="true" />
         </div>`
           )
           .join('');
