chore: update headings

--- a/source/feature.html
+++ b/source/feature.html
@@ -4,7 +4,7 @@
   <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">Fitur Kami</h2>
   <div class="flex items-center mb-20">
     <div class="flex-1 sm:flex-none md:w-1/2">
-      <h4 class="text-3xl text-gray-800 font-bold mb-3">Exercise Metric</h4>
+      <!-- <h4 class="text-3xl text-gray-800 font-bold mb-3">Exercise Metric</h4> -->
       <div class="text-gray-600 mb-8">
         <ol class="list-decimal">
           <li>Laundry kiloan rasa premium</li>
