--- a/source/intro.html
+++ b/source/intro.html
@@ -3,7 +3,7 @@
     <div
       class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center"
     >
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
+      <h1 id="intro" class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
         Yusril Laundry
         <br class="hidden lg:inline-block" />
         bersih dan rapih
@@ -20,11 +20,11 @@
         >
           DAPATKAN PENAWARAN
         </a>
-        <button
+        <a href="#testimoni"
           class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 rounded text-lg"
         >
           DAFTAR TESTIMONI
-        </button>
+        </a>
       </div>
     </div>
 
