--- a/source/testimonial.html
+++ b/source/testimonial.html
@@ -2,7 +2,7 @@
 
 <section class="bg-gray-100 mb-8">
   <div class="mx-auto px-6 py-20">
-    <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">Testimoni</h2>
+    <h2 id="testimoni" class="text-4xl font-bold text-center text-gray-800 mb-8">Testimoni</h2>
     <div id="testiResult" class="flex overflow-x-auto"></div>
   </div>
 </section>
