--- a/source/collage.html
+++ b/source/collage.html
@@ -1,4 +1,5 @@
 <section class="px-6 mb-8 mx-auto">
+  <h2 id="gallery" class="text-4xl font-bold text-center text-gray-800 mb-8">Gallery</h2>
   <div id="collageResult"></div>
   <!-- <div class="flex flex-row min-h-screen justify-center items-center">
     <div class="grid grid-cols-2 md:grid-cols-4 gap-4" id="collageResult"></div>
